--- a/src/mylangchain_app/05LangGraph/05_LangGraph_AgenticRAG.ipynb
+++ b/src/mylangchain_app/05LangGraph/05_LangGraph_AgenticRAG.ipynb
@@ -19,7 +19,7 @@
      "output_type": "stream",
      "text": [
       "sk\n",
-      "NY\n",
+      "WA\n",
       "tvly\n"
      ]
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "efe5c80a",
    "metadata": {},
    "outputs": [],
@@ -67,6 +67,7 @@
     "#from langchain_core.tools import tool\n",
     "from langchain.agents import tool\n",
     "from langchain_community.tools import TavilySearchResults\n",
+    "from langchain_core.documents import Document\n",
     "\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_upstage import UpstageEmbeddings\n",
@@ -74,7 +75,6 @@
     "\n",
     "# LangGraph MessagesState라는 미리 만들어진 상태를 사용\n",
     "from langgraph.graph import MessagesState\n",
-    "from langchain_core.documents import Document\n",
     "from langgraph.graph import StateGraph, START, END\n",
     "from langgraph.prebuilt import ToolNode\n",
     "from langgraph.prebuilt import create_react_agent\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "6649ec80",
    "metadata": {},
    "outputs": [
@@ -188,8 +188,8 @@
     "\n",
     "\n",
     "# 도구 목록을 정의 \n",
-    "tools = [search_menu, search_wine, search_web]\n",
-    "print(type(tools[0]))"
+    "tool_list = [search_menu, search_wine, search_web]\n",
+    "print(type(tool_list[0]))"
    ]
   },
   {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "c96e2202",
    "metadata": {},
    "outputs": [
@@ -223,6 +223,7 @@
     "#llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0, streaming=True)\n",
     "\n",
     "from langchain_upstage import ChatUpstage\n",
+    "\n",
     "llm = ChatUpstage(\n",
     "        model=\"solar-pro\",\n",
     "        base_url=\"https://api.upstage.ai/v1\",\n",
@@ -231,7 +232,7 @@
     "print(llm.model_name)\n",
     "\n",
     "# LLM에 도구 바인딩하여 추가 \n",
-    "llm_with_tools = llm.bind_tools(tools)\n",
+    "llm_with_tools = llm.bind_tools(tool_list)\n",
     "print(type(llm_with_tools))"
    ]
   },
@@ -245,15 +246,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AIMessage(content='[The `search_menu` function is ESSENTIAL because it directly accesses the restaurant\\'s authorized menu database to retrieve the \"대표 메뉴\" (representative menu items) as requested. No other function or general knowledge can provide this specific, confidential information.]', additional_kwargs={'tool_calls': [{'id': 'chatcmpl-tool-60a86293f2294225817244780d5d7e71', 'function': {'arguments': '{\"query\": \"\\\\ub300\\\\ud45c \\\\uba54\\\\ub274\"}', 'name': 'search_menu'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 69, 'prompt_tokens': 663, 'total_tokens': 732, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'solar-pro2-250909', 'system_fingerprint': None, 'id': 'd4fed445-1b09-40a2-a1ba-df3f92b708dc', 'service_tier': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run--a7c2366a-3db0-4923-9a25-ee688146a95b-0', tool_calls=[{'name': 'search_menu', 'args': {'query': '대표 메뉴'}, 'id': 'chatcmpl-tool-60a86293f2294225817244780d5d7e71', 'type': 'tool_call'}], usage_metadata={'input_tokens': 663, 'output_tokens': 69, 'total_tokens': 732, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})\n",
+      "AIMessage(content='[The `search_menu` function is ESSENTIAL to answer the question about the restaurant\\'s \"대표 메뉴\" (representative/main menu items), as it directly accesses the authorized menu database. No other function or general knowledge can provide this specific information.]', additional_kwargs={'tool_calls': [{'id': 'chatcmpl-tool-c138d86b31554b8d92f59163f28c36ab', 'function': {'arguments': '{\"query\": \"\\\\ub300\\\\ud45c \\\\uba54\\\\ub274\"}', 'name': 'search_menu'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 69, 'prompt_tokens': 663, 'total_tokens': 732, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'solar-pro2-250909', 'system_fingerprint': None, 'id': 'e566febb-1153-470b-b31a-9785c9afbe60', 'service_tier': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run--cb1ff036-dfdb-4597-abd9-739b3ed27c92-0', tool_calls=[{'name': 'search_menu', 'args': {'query': '대표 메뉴'}, 'id': 'chatcmpl-tool-c138d86b31554b8d92f59163f28c36ab', 'type': 'tool_call'}], usage_metadata={'input_tokens': 663, 'output_tokens': 69, 'total_tokens': 732, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "('[The `search_menu` function is ESSENTIAL because it directly accesses the '\n",
-      " 'restaurant\\'s authorized menu database to retrieve the \"대표 메뉴\" '\n",
-      " '(representative menu items) as requested. No other function or general '\n",
-      " 'knowledge can provide this specific, confidential information.]')\n",
+      "('[The `search_menu` function is ESSENTIAL to answer the question about the '\n",
+      " 'restaurant\\'s \"대표 메뉴\" (representative/main menu items), as it directly '\n",
+      " 'accesses the authorized menu database. No other function or general '\n",
+      " 'knowledge can provide this specific information.]')\n",
       "----------------------------------------------------------------------------------------------------\n",
       "[{'args': {'query': '대표 메뉴'},\n",
-      "  'id': 'chatcmpl-tool-60a86293f2294225817244780d5d7e71',\n",
+      "  'id': 'chatcmpl-tool-c138d86b31554b8d92f59163f28c36ab',\n",
       "  'name': 'search_menu',\n",
       "  'type': 'tool_call'}]\n",
       "----------------------------------------------------------------------------------------------------\n"
@@ -285,11 +286,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AIMessage(content='안녕하세요! 무엇을 도와드릴까요? 질문이나 요청이 있으시면 언제든지 알려주세요. 😊  \\n\\n(기능 호출 없이 일반적인 인사로 응답하였습니다. 추가적인 질문이 있으시면 필요한 도구를 최소화하여 활용하겠습니다.)', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 39, 'prompt_tokens': 660, 'total_tokens': 699, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'solar-pro2-250909', 'system_fingerprint': None, 'id': '148c91d6-7fe8-405c-85cb-a314ce2221c2', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None}, id='run--02d239ef-3363-4c68-8fa6-f7104c2b59b2-0', usage_metadata={'input_tokens': 660, 'output_tokens': 39, 'total_tokens': 699, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})\n",
+      "AIMessage(content='안녕하세요! 어떻게 도와드릴 수 있을까요?  \\n\\n질문에 필요한 정보나 요청사항을 알려주시면, 적절한 함수 호출이나 일반 지식으로 답변드리겠습니다. 😊  \\n\\n(CRITICAL DECISION CRITERIA에 따라, 현재 인사만으로는 함수 호출이 필요하지 않습니다.)', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 54, 'prompt_tokens': 660, 'total_tokens': 714, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'solar-pro2-250909', 'system_fingerprint': None, 'id': '55b5cdfa-c370-4f23-85c1-31e72d7b8212', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None}, id='run--1e974c80-aeb0-4fdf-ad32-d4028ecb456f-0', usage_metadata={'input_tokens': 660, 'output_tokens': 54, 'total_tokens': 714, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "('안녕하세요! 무엇을 도와드릴까요? 질문이나 요청이 있으시면 언제든지 알려주세요. 😊  \\n'\n",
+      "('안녕하세요! 어떻게 도와드릴 수 있을까요?  \\n'\n",
       " '\\n'\n",
-      " '(기능 호출 없이 일반적인 인사로 응답하였습니다. 추가적인 질문이 있으시면 필요한 도구를 최소화하여 활용하겠습니다.)')\n",
+      " '질문에 필요한 정보나 요청사항을 알려주시면, 적절한 함수 호출이나 일반 지식으로 답변드리겠습니다. 😊  \\n'\n",
+      " '\\n'\n",
+      " '(CRITICAL DECISION CRITERIA에 따라, 현재 인사만으로는 함수 호출이 필요하지 않습니다.)')\n",
       "----------------------------------------------------------------------------------------------------\n",
       "[]\n",
       "----------------------------------------------------------------------------------------------------\n"
@@ -321,25 +324,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AIMessage(content=\"To answer your question about NVIDIA's market capitalization fluctuations in the first half of 2024, I would need to call the `search_web` function since this information:\\n\\n1. **Relates to real-time financial data** not stored in the provided restaurant menu/wine database\\n2. **Requires up-to-date information** (2024 H1) that wouldn't be available through general knowledge\\n3. **Is directly essential** to answering your specific query\\n\\n[This function is ESSENTIAL because it retrieves the latest financial data about NVIDIA's market capitalization changes during the specified period, which cannot be obtained through the available restaurant database functions or general knowledge.]\", additional_kwargs={'tool_calls': [{'id': 'chatcmpl-tool-e495267c5e5d4df0932d01443f4e4cc4', 'function': {'arguments': '{\"query\": \"NVIDIA market cap fluctuations 2024 H1\"}', 'name': 'search_web'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 173, 'prompt_tokens': 675, 'total_tokens': 848, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'solar-pro2-250909', 'system_fingerprint': None, 'id': '5a8ad980-de36-4c6a-827d-98a60b92522a', 'service_tier': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run--fe761f2b-21c6-4f75-a5f1-b4d6879c6448-0', tool_calls=[{'name': 'search_web', 'args': {'query': 'NVIDIA market cap fluctuations 2024 H1'}, 'id': 'chatcmpl-tool-e495267c5e5d4df0932d01443f4e4cc4', 'type': 'tool_call'}], usage_metadata={'input_tokens': 675, 'output_tokens': 173, 'total_tokens': 848, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})\n",
+      "AIMessage(content='[엔비디아의 2024년 상반기 시가총액 변동 정보는 공개된 금융 데이터베이스나 최신 뉴스에만 존재하며, 제공된 메뉴/와인 검색 함수로는 접근할 수 없습니다. 따라서 웹 검색을 통해 최신 정보를 확인하는 것이 필수적입니다.]', additional_kwargs={'tool_calls': [{'id': 'chatcmpl-tool-f4f65d6989de4b30be9d358926eabe5e', 'function': {'arguments': '{\"query\": \"2024\\\\ub144 \\\\uc0c1\\\\ubc18\\\\uae30 \\\\uc5d4\\\\ube44\\\\ub514\\\\uc544 \\\\uc2dc\\\\uac00\\\\ucd1d\\\\uc561 \\\\ubcc0\\\\ub3d9\"}', 'name': 'search_web'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 74, 'prompt_tokens': 675, 'total_tokens': 749, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'solar-pro2-250909', 'system_fingerprint': None, 'id': 'b4fabf93-9c67-4c6c-9849-8154c6f28093', 'service_tier': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run--7e530e3c-201a-4518-a5e8-76ce239c4a16-0', tool_calls=[{'name': 'search_web', 'args': {'query': '2024년 상반기 엔비디아 시가총액 변동'}, 'id': 'chatcmpl-tool-f4f65d6989de4b30be9d358926eabe5e', 'type': 'tool_call'}], usage_metadata={'input_tokens': 675, 'output_tokens': 74, 'total_tokens': 749, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "(\"To answer your question about NVIDIA's market capitalization fluctuations in \"\n",
-      " 'the first half of 2024, I would need to call the `search_web` function since '\n",
-      " 'this information:\\n'\n",
-      " '\\n'\n",
-      " '1. **Relates to real-time financial data** not stored in the provided '\n",
-      " 'restaurant menu/wine database\\n'\n",
-      " \"2. **Requires up-to-date information** (2024 H1) that wouldn't be available \"\n",
-      " 'through general knowledge\\n'\n",
-      " '3. **Is directly essential** to answering your specific query\\n'\n",
-      " '\\n'\n",
-      " '[This function is ESSENTIAL because it retrieves the latest financial data '\n",
-      " \"about NVIDIA's market capitalization changes during the specified period, \"\n",
-      " 'which cannot be obtained through the available restaurant database functions '\n",
-      " 'or general knowledge.]')\n",
+      "('[엔비디아의 2024년 상반기 시가총액 변동 정보는 공개된 금융 데이터베이스나 최신 뉴스에만 존재하며, 제공된 메뉴/와인 검색 함수로는 '\n",
+      " '접근할 수 없습니다. 따라서 웹 검색을 통해 최신 정보를 확인하는 것이 필수적입니다.]')\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "[{'args': {'query': 'NVIDIA market cap fluctuations 2024 H1'},\n",
-      "  'id': 'chatcmpl-tool-e495267c5e5d4df0932d01443f4e4cc4',\n",
+      "[{'args': {'query': '2024년 상반기 엔비디아 시가총액 변동'},\n",
+      "  'id': 'chatcmpl-tool-f4f65d6989de4b30be9d358926eabe5e',\n",
       "  'name': 'search_web',\n",
       "  'type': 'tool_call'}]\n",
       "----------------------------------------------------------------------------------------------------\n"
@@ -387,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "2be73335",
    "metadata": {},
    "outputs": [],
@@ -411,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "d9830629",
    "metadata": {},
    "outputs": [
@@ -488,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "70feebba",
    "metadata": {},
    "outputs": [],
@@ -525,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "20ee53f5",
    "metadata": {},
    "outputs": [],
@@ -537,18 +528,17 @@
     "\n",
     "# AdaptiveRagState 타입을 정의\n",
     "# 여기서는 예시를 위해 최소한의 구조만 정의합니다.\n",
-    "class AdaptiveRagState(TypedDict):\n",
-    "    \"\"\"LangGraph의 상태를 정의하는 딕셔너리.\"\"\"\n",
-    "    question: str\n",
-    "    documents: List[Document]\n",
-    "    # 기타 상태 필드...\n",
+    "# class AdaptiveRagState(TypedDict):\n",
+    "#     \"\"\"LangGraph의 상태를 정의하는 딕셔너리.\"\"\"\n",
+    "#     question: str\n",
+    "#     documents: List[Document]\n",
+    "#     # 기타 상태 필드...\n",
     "\n",
     "# search_menu, search_wine, search_web은 실제 검색 엔진(예: Retriever)을 호출하는 Runnable 객체여야 합니다.\n",
     "# (이 객체들은 코드 외부에서 정의되어 있어야 합니다.)\n",
     "# search_menu = ... \n",
     "# search_wine = ...\n",
     "# search_web = ...\n",
-    "\n",
     "\n",
     "def search_menu_adaptive(state: AdaptiveRagState):\n",
     "    \"\"\"\n",
@@ -604,7 +594,7 @@
     "\n",
     "def search_web_adaptive(state: AdaptiveRagState):\n",
     "    \"\"\"\n",
-    "    레스토랑 내부 정보 외의 일반 정보나 최신 정보를 웹에서 검색하고 결과를 반환하는 노드입니다.\n",
+    "    메뉴와 와인 정보 이외의 일반적인 정보나 최신 정보를 웹에서 검색하고 결과를 반환하는 노드입니다.\n",
     "\n",
     "    Args:\n",
     "        state (AdaptiveRagState): 현재 LangGraph의 상태 딕셔너리.\n",
@@ -637,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "48f70286",
    "metadata": {},
    "outputs": [],
@@ -651,15 +641,15 @@
     "# ChatPromptTemplate은 LLM에게 전달될 최종 메시지 형식을 정의합니다.\n",
     "rag_prompt = ChatPromptTemplate.from_messages([\n",
     "    # 시스템 프롬프트: LLM에게 답변 생성 규칙과 역할을 부여합니다.\n",
-    "    (\"system\", \"\"\"당신은 제공된 문서를 기반으로 질문에 답변하는 조수입니다. 다음 지침을 따르십시오:\n",
+    "    (\"system\", \"\"\"당신은 제공된 문서를 기반으로 질문에 답변하는 Assistant입니다. 다음 지침을 따르십시오:\n",
     "\n",
-    "1. 제공된 문서의 정보만을 사용하십시오.\n",
-    "2. 문서에 관련 정보가 부족하면 \"제공된 문서에는 이 질문에 답변할 정보가 포함되어 있지 않습니다.\"라고 말하십시오.\n",
-    "3. 답변에 문서의 관련 부분을 인용하십시오.\n",
-    "4. 추측하거나 문서에 없는 정보를 추가하지 마십시오.\n",
-    "5. 답변을 간결하고 명확하게 유지하십시오.\n",
-    "6. 관련 없는 정보는 생략하십시오.\"\"\"\n",
-    "),\n",
+    "    1. 제공된 문서의 정보만을 사용하십시오.\n",
+    "    2. 문서에 관련 정보가 부족하면 \"제공된 문서에는 이 질문에 답변할 정보가 포함되어 있지 않습니다.\"라고 말하십시오.\n",
+    "    3. 답변에 문서의 관련 부분을 인용하십시오.\n",
+    "    4. 추측하거나 문서에 없는 정보를 추가하지 마십시오.\n",
+    "    5. 답변을 간결하고 명확하게 유지하십시오.\n",
+    "    6. 관련 없는 정보는 생략하십시오.\"\"\"\n",
+    "    ),\n",
     "    # 사용자(Human) 프롬프트: 검색된 문서와 실제 질문을 LLM에게 전달하는 템플릿입니다.\n",
     "    # {documents}와 {question}이 최종적으로 검색된 내용과 사용자 질문으로 대체됩니다.\n",
     "    (\"human\", \"다음 문서를 사용하여 다음 질문에 답하십시오:\\n\\n[문서]\\n{documents}\\n\\n[질문]\\n{question}\"),\n",
@@ -687,7 +677,8 @@
     "\n",
     "    # 3. 검색된 문서 리스트를 LLM 프롬프트에 삽입할 수 있는 단일 문자열로 변환합니다.\n",
     "    # 각 문서의 본문(page_content)과 메타데이터(metadata)를 구분하여 문자열을 만듭니다.\n",
-    "    documents_text = \"\\n\\n\".join([f\"---\\n본문: {doc.page_content}\\n메타데이터:{str(doc.metadata)}\\n---\" for doc in documents])\n",
+    "    documents_text = \"\\n\\n\".join\\\n",
+    "        ([f\"---\\n본문: {doc.page_content}\\n메타데이터:{str(doc.metadata)}\\n---\" for doc in documents])\n",
     "\n",
     "    # 4. RAG 체인 구성 및 실행\n",
     "    # 프롬프트 템플릿(rag_prompt) -> LLM 호출(llm) -> 문자열 파서(StrOutputParser) 순으로 연결합니다.\n",
@@ -702,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "2e7312a1",
    "metadata": {},
    "outputs": [],
@@ -717,12 +708,12 @@
     "    # 시스템 프롬프트: 일반 AI 어시스턴트로서의 역할을 정의하고 답변 지침을 부여합니다.\n",
     "    (\"system\", \"\"\"당신은 다양한 주제를 돕는 AI 어시스턴트입니다. 다음 지침을 따르십시오:\n",
     "\n",
-    "1. 능력이 닿는 한 정확하고 유용한 정보를 제공하십시오.\n",
-    "2. 확신이 없을 때는 불확실성을 표현하십시오. 추측은 피하십시오.\n",
-    "3. 답변은 간결하지만 정보를 담고 있도록 유지하십시오.\n",
-    "4. 사용자에게 필요하면 명확한 설명을 요청할 수 있다고 알리십시오.\n",
-    "5. 윤리적이고 건설적으로 응답하십시오.\n",
-    "6. 해당되는 경우 신뢰할 수 있는 일반 출처를 언급하십시오.\"\"\"),\n",
+    "    1. 능력이 닿는 한 정확하고 유용한 정보를 제공하십시오.\n",
+    "    2. 확신이 없을 때는 불확실성을 표현하십시오. 추측은 피하십시오.\n",
+    "    3. 답변은 간결하지만 정보를 담고 있도록 유지하십시오.\n",
+    "    4. 사용자에게 필요하면 명확한 설명을 요청할 수 있다고 알리십시오.\n",
+    "    5. 윤리적이고 건설적으로 응답하십시오.\n",
+    "    6. 해당되는 경우 신뢰할 수 있는 일반 출처를 언급하십시오.\"\"\"),\n",
     "    # 사용자(Human) 프롬프트: 단순하게 사용자 질문만을 LLM에 전달합니다.\n",
     "    # 이 프롬프트는 {documents} 변수가 없다는 것이 RAG 프롬프트와의 주요 차이점입니다.\n",
     "    (\"human\", \"{question}\"),\n",
@@ -732,7 +723,7 @@
     "def llm_fallback_adaptive(state: AdaptiveRagState):\n",
     "    \"\"\"\n",
     "    검색된 문서(context) 없이 LLM의 일반적인 지식을 사용하여 답변을 생성하는 노드입니다.\n",
-    "    이는 RAG가 실패했을 때의 최종 대안(fallback) 역할을 합니다.\n",
+    "    이는 RAG가 실패했을 때의 최종 대안(fallback)을 제공하는 역할을 합니다.\n",
     "\n",
     "    Args:\n",
     "        state (AdaptiveRagState): 현재 LangGraph의 상태 딕셔너리. \n",
@@ -1605,7 +1596,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
